# applied-fp-course

./: .gitignore  .travis.yml  FUTURE_PLANS.md  For_Facilitators.md  INSTRUCTOR_NOTES.md  README.md  applied-fp-course.cabal  applied-fp-course.nix  cabal.project  course-overlays.nix  default.nix  flake.nix  hie.yaml  shell.nix  stack.yaml  stack.yml
.devcontainer/: devcontainer.json
bonus/: README.md  hkd.md  mtl.md
exe/: Level01.hs  Level02.hs  Level03.hs  Level04.hs  Level05.hs  Level06.hs  Level07.hs
files/: appconfig.json
level01/: README.md  changelog.md  default.nix  level01.cabal  level01.nix
level01/src/: Main.hs
level01/src/FirstApp/: Main.hs
level02/: ChangeLog.md  README.md  default.nix  level02.cabal  level02.nix  stack.yaml
level02/src/: Main.hs
level02/src/FirstApp/: Main.hs  Types.hs
level03/: ChangeLog.md  README.md  appconfig.json  default.nix  foo.yml  level03.cabal  level03.nix  stack.yaml
level03/src/: Conf.hs  Main.hs  Types.hs
level03/src/FirstApp/: Conf.hs  Main.hs  Types.hs
level03/tests/: Test.hs
level04/: ChangeLog.md  README.md  appconfig.json  default.nix  level04.cabal  level04.nix  test.json
level04/src/: Main.hs
level04/src/FirstApp/: Conf.hs  DB.hs  Main.hs  Types.hs
level04/src/FirstApp/DB/: PostgreSQL.hs  Types.hs
level04/src/FirstApp/Types/: CommentText.hs  Error.hs  Topic.hs
level04/tests/: Test.hs
level05/: LICENSE  README.md  appconfig.json  changelog.md  default.nix  level05.cabal  level05.nix  shell.nix
level05/src/FirstApp/: Conf.hs  DB.hs  Main.hs  Types.hs
level05/src/FirstApp/Conf/: CommandLine.hs  File.hs
level05/src/FirstApp/DB/: PostgreSQL.hs  Types.hs
level05/src/FirstApp/Types/: DB.hs  Error.hs  Topic.hs
level05/tests/: Test.hs  doctests.hs
level06/: ChangeLog.md  README.md  appconfig.json  default.nix  level06.cabal  level06.nix
level06/src/FirstApp/: AppM.hs  Conf.hs  DB.hs  Main.hs  Responses.hs  Types.hs
level06/src/FirstApp/Conf/: CommandLine.hs  File.hs
level06/src/FirstApp/DB/: PostgreSQL.hs  Types.hs
level06/tests/: Test.hs
level07/: README.md  changelog.md  default.nix  level07.cabal  level07.nix  stack.yaml
level07/src/FirstApp/: AppM.hs  Conf.hs  DB.hs  Error.hs  Main.hs  Responses.hs  Types.hs
level07/src/FirstApp/Conf/: File.hs
level07/src/FirstApp/DB/: PostgreSQL.hs  Types.hs
level07/tests/: Test.hs  doctests.hs
level42/: .ghci  README.md  app_db.db  appconfig.json  default.nix  level42.cabal  level42.nix  stack.yaml
level42/src/FirstApp/: AppM.hs  DB.hs  Main.hs  Responses.hs  Types.hs
level42/src/FirstApp/DB/: PostgreSQL.hs  Types.hs
level42/src/FirstApp/Types/: Error.hs
level42/tests/: StateMachineTests.hs
nix/: nixpkgs.json  nixpkgs.nix  tasty-wai.json  tasty-wai.nix  waargonaut.json  waargonaut.nix
src/Level01/: Core.hs  Main.hs  README.md
src/Level02/: Core.hs  Main.hs  README.md  Types.hs
src/Level03/: Core.hs  Main.hs  README.md  Types.hs
src/Level04/: Conf.hs  Core.hs  DB.hs  Main.hs  README.md  Types.hs
src/Level04/DB/: PostgreSQL.hs  Types.hs
src/Level04/Types/: CommentText.hs  Error.hs  Topic.hs
src/Level05/: AppM.hs  Conf.hs  Core.hs  DB.hs  Main.hs  README.md  Types.hs  appconfig.json  test.json
src/Level05/Conf/: CommandLine.hs  File.hs
src/Level05/DB/: PostgreSQL.hs  Types.hs
src/Level05/Types/: CommentText.hs  Error.hs  Topic.hs
src/Level06/: AppM.hs  Conf.hs  Core.hs  DB.hs  Main.hs  README.md  Responses.hs  Types.hs
src/Level06/Conf/: CommandLine.hs  File.hs
src/Level06/DB/: PostgreSQL.hs  Types.hs
src/Level06/Types/: CommentText.hs  Error.hs  Topic.hs
src/Level07/: AppM.hs  Conf.hs  Core.hs  DB.hs  Main.hs  README.md  Responses.hs  Types.hs
src/Level07/Conf/: CommandLine.hs  File.hs
src/Level07/DB/: PostgreSQL.hs  Types.hs
src/Level07/Types/: CommentText.hs  Error.hs  Topic.hs
src/Workshop/: NextLevels.md
tests/: Helpers.hs  Level03Tests.hs  Level04Tests.hs  Level05Tests.hs  Level06Tests.hs  Level07Tests.hs  Test.hs  doctests.hs
tests/level03-tests/: Level03Tests.hs
tests/level04-tests/: Level04Tests.hs
tests/level05-tests/: Level05Tests.hs
tests/level06-tests/: Level06Tests.hs
tests/level07-tests/: Level07Tests.hs
